management/k8s/traefik/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.2
          volumeMounts:
            - mountPath: /etc/traefik/traefik.yml
              name: traefik-config
              subPath: traefik.yml
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
            - name: user-port
              containerPort: 8100
            - name: auth-port
              containerPort: 9000
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
