management/k8s/traefik/ex-whoami-services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80

  selector:
    app: whoami
