management/k8s/traefik/03-traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-gateway
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 9000
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8100
