management/k8s/traefik/03-user-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-gateway
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/user-service`)
      kind: Rule
      services:
        - name: user-service
          port: 8100
