management/k8s/traefik/ex-whoami-ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8100
          #
          - path: /notice
            pathType: Prefix
            backend:
              service:
                name: notice-service
                port:
                  number:
          - path: /qna
            pathType: Prefix
            backend:
              service:
                name: qna-service
                port:
                  number: 8100
